# phenotype2phenopacket

./: README.md  pyproject.toml  tox.ini
.github/workflows/: pypi-publish.yml
src/phenotype2phenopacket/: cli.py  cli_add.py  cli_convert.py  cli_create.py  convert.py
src/phenotype2phenopacket/add/: add_genes.py  add_variants.py
src/phenotype2phenopacket/convert/: convert.py
src/phenotype2phenopacket/create/: create.py
src/phenotype2phenopacket/utils/: gene_map_utils.py  phenopacket_utils.py  utils.py
tests/: test_convert.py  test_phenopacket_utils.py
