[tool.poetry]
name = "phenotype2phenopacket"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "phenotype2phenopacket", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
