[tool.poetry]
name = "phenotype2phenopacket"
version = "0.1.0"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{include = "phenotype2phenopacket", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
phenopackets = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
