[tool.poetry]
name = "phenotype2phenopacket"
version = "0.6.12"
description = ""
authors = ["Yasemin Bridges <y.bridges@qmul.ac.uk>"]
readme = "README.md"
packages = [{ include = "phenotype2phenopacket", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.0"
phenopackets = "^2.0.2"
polars = "^0.19"
oaklib = "^0.5.1"
click = "^8.1.3"
pheval = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.poetry.scripts]
p2p = "phenotype2phenopacket.cli:main"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
